@startuml Hytale Panel ER Diagram

skinparam backgroundColor #1a1a2e
skinparam defaultFontColor #e0e0e0

title Hytale Panel - Database ER Diagram

entity "users" as users {
    * id : uuid <<PK>>
    --
    * username : varchar(50) <<UNIQUE>>
    * password_hash : varchar(255)
    * role : varchar(20) <<CHECK: admin|readonly>>
    totp_secret : varchar(255) <<encrypted>>
    totp_enabled : boolean = false
    failed_login_attempts : integer = 0
    locked_until : timestamp
    * created_at : timestamp = now()
    * updated_at : timestamp = now()
}

entity "sessions" as sessions {
    * id : uuid <<PK>>
    --
    * user_id : uuid <<FK>>
    * ip_address : varchar(45)
    user_agent : varchar(500)
    pending_2fa : boolean = false
    * expires_at : timestamp
    * created_at : timestamp = now()
}

entity "audit_logs" as audit_logs {
    * id : uuid <<PK>>
    --
    user_id : uuid <<FK>>
    * action : varchar(100)
    target : varchar(200)
    details : jsonb
    ip_address : varchar(45)
    * success : boolean
    * created_at : timestamp = now()
}

entity "backup_metadata" as backup_metadata {
    * id : uuid <<PK>>
    --
    * filename : varchar(255)
    label : varchar(50)
    * size_bytes : bigint
    * sha256 : varchar(64)
    created_by : uuid <<FK>>
    * created_at : timestamp = now()
}

entity "crash_events" as crash_events {
    * id : uuid <<PK>>
    --
    * severity : varchar(20) <<CHECK: info|warning|error|critical>>
    * pattern : varchar(100)
    * summary : text
    raw_log : text
    * detected_at : timestamp = now()
}

entity "settings" as settings {
    * key : varchar(100) <<PK>>
    --
    * value : jsonb
    * updated_at : timestamp = now()
    updated_by : uuid <<FK>>
}

' Relationships
users ||--o{ sessions : "sessions.user_id -> users.id"
users ||--o{ audit_logs : "audit_logs.user_id -> users.id"
users ||--o{ backup_metadata : "backup_metadata.created_by -> users.id"
users ||--o{ settings : "settings.updated_by -> users.id"

@enduml